[package]
name = "docker-mcp-server"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "A Model Context Protocol server for Docker and Docker Compose operations"
readme = "README.md"
license = "MIT"

[dependencies]
# Docker API client
bollard = "0.15.0"

# Async runtime
tokio = { version = "1.34.0", features = ["full"] }

# Serialization/Deserialization
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
serde_yaml = "0.9.27"

# Error handling
thiserror = "1.0.50"
anyhow = "1.0.75"

# Configuration
config = "0.13.4"

# Logging
log = "0.4.20"
env_logger = "0.10.1"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"

# Security
jsonschema = "0.17.1"
governor = "0.6.0"

# Utilities
futures = "0.3.29"
async-trait = "0.1.74"
chrono = { version = "0.4.31", features = ["serde"] }
uuid = { version = "1.6.1", features = ["v4", "serde"] }
regex = "1.10.2"
url = "2.5.0"
humantime-serde = "1.1.1"
base64 = "0.21.5"
tempfile = "3.8.1"
clap = "3.2.25"

futures-util = { version = "0.3.29", features = ["io"] }