[package]
name = "mcp-postgres-server"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.32", features = ["full"] }
tokio-postgres = "0.7"
postgres-types = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bytes = "1.5"
thiserror = "1.0"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
dotenv = "0.15"

